dark mode fix - replace $c-bg-light with var(--c-bg-light)

--- a/features/discussions/index.scss
+++ b/features/discussions/index.scss
@@ -58,13 +58,13 @@
         @extend %bold;
         @extend %corners;
         padding: 10px;
-        border: 2px solid $c-bg-light;
+        border: 2px solid var(--c-bg-light);
         display: inline-block;
         margin: 3px;
         cursor: pointer;
 
         &:hover {
-            background-color: $c-bg-light;
+            background-color: var(--c-bg-light);
         }
 
         &.is-selected {
@@ -79,7 +79,7 @@
         padding: 5px;
 
         &:hover {
-            background-color: $c-bg-light;
+            background-color: var(--c-bg-light);
         }
 
         a {
@@ -102,7 +102,7 @@
             padding: 10px 5px;
 
             &:hover {
-                background: $c-bg-light;
+                background: var(--c-bg-light);
             }
         }
     }
