--- a/layouts/Navbar/index.scss
+++ b/layouts/Navbar/index.scss
@@ -199,7 +199,7 @@
         .navbar-dropdown {
             a.navbar-item.is-active,
             .navbar-item.is-active {
-                color: $c-lightest !important;
+                color: var(--c-lightest) !important;
             }
         }
     }
@@ -336,7 +336,7 @@
             font-size: 10px;
             padding-bottom: 10px;
             padding-left: 5px;
-            background: $c-bg-light;
+            background: var(--c-bg-light);
         }
     }
 
