--- a/pages/settings/index.scss
+++ b/pages/settings/index.scss
@@ -8,7 +8,7 @@
     }
 
     section.settings-header {
-        border-bottom: 1px solid $c-bg-light;
+        border-bottom: 1px solid var(--c-bg-light);
         padding-bottom: 10px;
         margin-bottom: $gap;
 
